# lonely-eye

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pylint.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_03_06_1415-66e00572c64c_added_camera_table.py  2024_03_06_1728-dcb0cf78bdc4_added_camera_table.py  2024_03_12_1931-c3d80e6927da_create_tables_car_owner_and_transport.py  2024_03_13_2012-054526761bcc_create_tables_car_owner_and_transport.py  2024_03_14_1652-ac055ab6c176_create_table_violation.py  2024_03_15_1402-8eace1cdb13c_create_table_worker.py  2024_03_18_1315-e1e0fda1aab6_create_table_manager.py  2024_03_18_1727-acb022077356_add_column_skill_for_table_worker.py  2024_03_19_1807-b941dd59a194_create_case_table.py  2024_03_19_2048-104ec5fee94a_create_table_solution.py  2024_03_20_0558-96f7182e50d5_add_column_skill_in_table_solution.py
docker/: app.sh
lonely-eye/: config.py
lonely_eye/: __init__.py  cache_memory.py  config.py  database.py  main.py  models.py
lonely_eye/auth/: dependencies.py  exceptions.py  schemas.py  service.py  utils.py
lonely_eye/cameras/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
lonely_eye/cars_owners/: constants.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
lonely_eye/cases/: exceptions.py  models.py  router.py  schemas.py  (+1 more)
tests/: conftest.py  test_1_car_owners.py  test_1_violations.py  test_2_cameras.py  test_3_workers.py  test_4_managers.py  test_5_cases.py  test_car_owners.py  test_violations.py  test_workers.py
(+38 files in other folders)
