[tool.poetry]
name = "lonely-eye"
version = "0.1.0"
description = ""
authors = ["Vladislav Korostylev <sunrekay>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standart"], version = "^0.27.1"}
boto3 = "^1.34.51"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
