[tool.poetry]
name = "lonely-eye"
version = "0.1.0"
description = ""
authors = ["Vladislav Korostylev <sunrekay>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standart"], version = "^0.27.1"}
boto3 = "^1.34.51"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
pydantic-extra-types = "^2.6.0"
leb128 = "^1.0.6"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.5.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
